--- a/README.org
+++ b/README.org
@@ -7,6 +7,7 @@
   - [[#geotiff][GeoTIFF]]
   - [[#netcdf][NetCDF]]
   - [[#shapefile][Shapefile]]
+  - [[#zarr][ZARR]]
 - [[#data-types][Data Types]]
   - [[#database][Database]]
   - [[#geospatial-raster][Geospatial raster]]
@@ -134,6 +135,10 @@ ncdump -chs file.nc
 ** Shapefile
 
 Shapefiles should be replaced by GeoPackage files.
+
+** ZARR
+
++ https://zarr.readthedocs.io/en/stable/
 
 * Data Types
 ** Database
